# kiero

./: .gitignore  README.md  fix_imports.py  main.py  patch.py  patch2.py  patch_cli.py  patch_cli_if_else.py  patch_cli_imports2.py  patch_cli_match.py  patch_comments.py  patch_independent.py  patch_match.py  patch_recursive.py  patch_utils.py  patch_validate_insert.py  patch_validation.py  pyproject.toml  test_validate.py
kiero/: __init__.py  __main__.py  batch.py  cbz.py  cli.py  commands.py  pipeline.py  single.py  utils.py
kiero/detectors/: __init__.py  base.py  clipseg.py  template.py  yolo.py
kiero/inpainters/: __init__.py  base.py  lama.py  opencv.py
src/kiero/: batch.py  cli.py  commands.py  utils.py
src/kiero/detectors/: __init__.py  base.py  yolo.py
src/kiero/inpainters/: __init__.py
