[project]
name = "kiero"
version = "0.1.0"
description = "Manga watermark detector and remover"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "torch",
    "ultralytics",
    "simple-lama-inpainting",
]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[project.scripts]
kiero = "kiero.cli:main"
